--- a/style.css
+++ b/style.css
@@ -18,9 +18,10 @@ body {
 }
 
 main {
-  background: url(./images/background.svg);
-  width: 375px;
-  height: 812px;
+  background: url(./images/background.svg) no-repeat center/cover;
+  width: 100vw;
+  min-height: 812px;
+  height: 100vh;
 }
 
 .container {
@@ -76,4 +77,22 @@ ul {
   display: flex;
   gap: 0.5rem;
   justify-content: center;
+}
+
+li:hover {
+  opacity: 40%;
+}
+
+@media (min-width: 720px) {
+  main {
+    background: url(./images/backgroundDesktop.svg) no-repeat center/cover;
+    background-color: black;
+  }
+}
+
+@media (min-width: 960px) {
+  main {
+    background: url(./images/backgroundDesktop.svg) no-repeat center/cover;
+    background-color: black;
+  }
 }
